[tool.poetry]
name = "lecture"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
matplotlib = "^3.4.1"
pandas = "^1.2.4"
tqdm = "^4.60.0"
xlrd = "^2.0.1"
PyQt5 = "^5.15.4"
requests = "^2.25.1"
uuid = "^1.30"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
