[tool.poetry]
name = "shannon-for-upbit"
version = "0.1.0"
description = ""
authors = ["Charles 박 <coreanq@gmail.com>"]
readme = "README.md"
packages = [{include = "shannon_for_upbit"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jwt = "^1.3.1"
requests = "^2.31.0"
pyside6 = "^6.5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
