[tool.poetry]
name = "cost averaging"
version = "0.1.0"
description = ""
authors = ["Charles 박 <coreanq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
pyside6 = "^6.5.1.1"
PyJWT = "^2.7.0"
pytest = "^7.4.0"
openpyxl = "^3.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^1.0"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
